# gtest-project-example

./: CMakeLists.txt  LICENSE  README
sample/: CMakeLists.txt
sample/test/: sample_test.cpp
sample_str/: CMakeLists.txt
sample_str/test/: string_test.cpp
src/: CMakeLists.txt  cpp_sort_impl.cpp
src/test/: cpp_sorter_test.cpp
